--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Dapur Jiwa</title>
 <meta name="ahrefs-site-verification" content="2462aeb0e6c7dc726b37bb139868c6227ba8ee48e5477808d5fbf269b4fdde75">
+<meta name="google-site-verification" content="02j_AjBtaEwMId15NhKwDza9QmiUjeijFjydaHg76IU" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
