--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+  a { font-size: 16px; padding:5px; }
 </style>
 </head>
 <body>
